--- a/important_documents.html
+++ b/important_documents.html
@@ -37,11 +37,11 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="">Books</a></li>
-                            <li><a href="">Films and Music</a></li>
-                            <li><a href="">Important papers and Documents</a></li>
-                            <li><a href="">Prominent leaders</a></li>
-                            <li><a href="">Art and Sculptures</a></li>
+                            <li><a href="books.html">Books</a></li>
+                            <li><a href="film_and_music.html">Films and Music</a></li>
+                            <li><a href="important_documents.html">Important Documents</a></li>
+                            <li><a href="prominent_leaders.html">Prominent leaders</a></li>
+                            <li><a href="art_and_sculptures.html">Art and Sculptures</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">CONTACT</a></li>
@@ -58,7 +58,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
             accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
             et?</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!4v1630292668275!6m8!1m7!1sCAoSLEFGMVFpcE5SZTBST1FoLURwMHFtSzY0ZzVTbkt0MGFQeGhXZzJVNXhWY3VT!2m2!1d29.9431497!2d-90.0703166!3f194.96785!4f17.10611!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1630292668275!6m8!1m7!1sCAoSLEFGMVFpcE5SZTBST1FoLURwMHFtSzY0ZzVTbkt0MGFQeGhXZzJVNXhWY3VT!2m2!1d29.9431497!2d-90.0703166!3f194.96785!4f17.10611!5f0.7820865974627469"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
     <!-- Exhibition Content -->
     <section class="items">
