--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="tour.html">TOUR</a>
 						<ul>
-							<li><a href="">Books</a></li>
-							<li><a href="">Films and Music</a></li>
-							<li><a href="">Important papers and Documents</a></li>
-							<li><a href="">Prominent leaders</a></li>
-							<li><a href="">Art and Sculptures</a></li>
+							<li><a href="books.html">Books</a></li>
+							<li><a href="film_and_music.html">Films and Music</a></li>
+							<li><a href="important_documents.html">Important Documents</a></li>
+							<li><a href="prominent_leaders.html">Prominent leaders</a></li>
+							<li><a href="art_and_sculptures.html">Art and Sculptures</a></li>
 						</ul>
 					</li>
 					<li><a href="contact.html">CONTACT</a></li>
