--- a/film_and_music.html
+++ b/film_and_music.html
@@ -61,24 +61,30 @@
 
         <div class="exh-row">
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>Battle of Britain</h3>
+                <iframe width="100%" height="100%" src="images/BattleOfBritain.mp4"></iframe>
+                <p>The heroic sacrifices of those made in the Battle of Britain were immortalised in the great and
+                    sobering words of Sir Winston Churchill when he said “never was so much owed by so many to so few.”
+                </p>
+                </iframe>
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>The Dam Busters March</h3>
+                <iframe width="100%" height="100%" src="images/TheDamBustersMarch.mp4"></iframe>
+                <p>The main theme from 1955 epic film The Dam Busters and now a mainstay of military concerts and
+                    commemorations all year round, the lively march evokes the heroism and spirit of the members of
+                    RAF’s 617 Squadron who contributed so significantly to the British war effort by destroying several
+                    dams essential to Germany’s war infrastructure.</p>
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>Theme from The Great Escape</h3>
+                <audio controls autoplay>
+                    <source src="images/TheGreatEscape.mp3" type="audio/mp3">
+                </audio>
+                <p>The plucky theme from The Great Escape (1963) encapsulates British resolve and spirit in the face of
+                    the adversity of World War II.</p>
             </div>
         </div>
     </section>
