--- a/books.html
+++ b/books.html
@@ -54,40 +54,31 @@
 
     <!-- Exhibition Content -->
     <section class="items">
-        <h1>Items</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
-            accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
-            et?</p>
+        <h1>Introduction</h1>
+        <p>Background to the literature of this time period</p>
 
         <div class="exh-row">
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>Evolution</h3>
+                <p>The outbreak of war in 1939, as in 1914, brought to an end an era of great intellectual and creative exuberance. Individuals were dispersed; the rationing of paper affected the production of magazines and books.</p>
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>Limitations</h3>
+                <p>The poem and the short story, convenient forms for men under arms, became the favoured means of literary expression. It was hardly a time for new beginnings, although the poets of the New Apocalypse movement produced three anthologies (1940–45) inspired by Neoromantic anarchism.</p>
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>Coming Through</h3>
+                <p>No important new novelists or playwrights appeared. In fact, the best fiction about wartime was produced by established writers. Only three new poets (all of whom died on active service) showed promise.</p>
             </div>
         </div>
     </section>
 
     <!-- Exhibtion Images -->
     <section class="exh-img">
-        <h1>Exhibitions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda sit ipsa labore sapiente ullam vel
-            iure eos molestias, incidunt cum quasi eligendi? Odio quis excepturi, obcaecati asperiores quam accusantium!
+        <h1>Featured</h1>
+        <p>Notable works featured from the era of the war 
         </p>
 
         <div class="exh-row">
@@ -117,25 +108,19 @@
     <!-- Extra  Exhibition Features -->
     <section class="extra">
         <h1>More</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat labore possimus doloremque numquam ipsa
-            praesentium modi porro alias adipisci obcaecati unde ipsam tenetur laboriosam sit necessitatibus, sint ex.
-            Et, at?</p>
+        <p>Remnants of an era that defined modern-day literature</p>
 
         <div class="exh-row">
             <div class="extra-col">
-                <img src="images/instrument.jpg">
-                <h3>Instrument of Surrender</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <img src="images/caught.jpg">
+                <h3>Caught by Henry Green</h3>
+                <p>Caught is largely based on Henry Green’s experiences, from 1939 through Christmas, 1940, as a member of London’s Auxiliary Fire Service. Caught was published in 1942, when the war’s outcome was uncertain. Like many of Green’s novels, it deals with class, but at its heart, it is the story of the different ways in which lives and minds can come undone.</p>
             </div>
 
             <div class="extra-col">
-                <img src="images/ration.jpg">
-                <h3>National Ration Book</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <img src="images/no-directions.png">
+                <h3>No Directions by James Hanley</h3>
+                <p>Hanley published, in 1943, No Directions, which is set during the London Blitz, a work that has been commented on by several literary critics. He later re-used this novel, to form the middle section of A Dream Journey (1976). Hanley had initially planned on turning No Directions into a trilogy.</p>
             </div>
 
             <div class="extra-col">
