--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
 		</nav>
 
 		<div class="text-box">
-			<h1>World's Largest World War II Museum</h1>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit non dolorem in beatae dignissimos neque,
-				facere cumque? Nesciunt veritatis eveniet totam laudantium voluptates et voluptas soluta, inventore
-				minima incidunt minus.</p>
+			<h1>WWII Museum</h1>
+			<p>Home of the largest collection of WWII remains</p>
 			<a href="tour.html" class="btn1">Take a tour!</a>
 		</div>
 	</section>
