--- a/film_and_music.html
+++ b/film_and_music.html
@@ -157,9 +157,9 @@
     <!-- Footer -->
     <section class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid nam ullam voluptatem harum, adipisci, nisi
-            <br>
-            accusamus et repellendus tenetur voluptates dolore illum animi, in ab sint error odio maiores quam?
+        <p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
+			<br>
+			music, films, art, documents and more of World War II right to your home!
         </p>
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
