--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 	<!-- Exhibitions -->
 	<section class="exhibition">
 		<h1>Our Exhibitions</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore blanditiis modi quasi dolor id numquam
-			necessitatibus quidem rerum expedita ex distinctio deserunt eius autem nostrum, ea debitis dicta delectus
-			saepe?</p>
+		<p>Explore the world's largest collection of WWII books, films, music, documents, art, and more!</p>
 
 		<div class="row1">
 			<div class="exhibition-col1">
@@ -70,9 +68,7 @@
 				<div class="layer1">
 					<h3>BOOKS</h3>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime enim repellat consequatur illum
-					odio, dolor dolore tenetur fugit ducimus, minima minus similique laborum! Aliquam est obcaecati sed
-					dolorum necessitatibus beatae.</p>
+				<p>The outbreak of war in 1939, as in 1914, brought to an end an era of great intellectual and creative exuberance. The rationing of paper affected the production of magazines and books. Discover more about this unique period in world literature! </p>
 			</div>
 			<div class="exhibition-col1">
 				<img src="images/Films&Musics.png">
@@ -104,7 +100,7 @@
 					dolorum necessitatibus beatae.</p>
 			</div>
 			<div class="exhibition-col2">
-				<img src="images/ProminentLeaders.png">
+				<img src="images/memorial.jpg">
 				<div class="layer2">
 					<h3>ART AND SCULPTURES</h3>
 				</div>
@@ -168,9 +164,9 @@
 	<!-- Footer -->
 	<section class="footer">
 		<h4>About Us</h4>
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid nam ullam voluptatem harum, adipisci, nisi
+		<p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
 			<br>
-			accusamus et repellendus tenetur voluptates dolore illum animi, in ab sint error odio maiores quam?
+			music, films, art, documents and more of World War II right to your home!
 		</p>
 		<div class="icons">
 			<i class="fab fa-facebook-f"></i>
