--- a/index.html
+++ b/index.html
@@ -75,18 +75,14 @@
 				<div class="layer1">
 					<h3>FILMS AND MUSIC</h3>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime enim repellat consequatur illum
-					odio, dolor dolore tenetur fugit ducimus, minima minus similique laborum! Aliquam est obcaecati sed
-					dolorum necessitatibus beatae.</p>
+				<p>During World War II, the entertainment industry changed to help the war effort. It became more closely controlled by national governments, who sought to keep spirits high and to depict the war in a positive light. They also used entertainment media to keep citizens informed. Discover more about this unique period in entertainment media!</p>
 			</div>
 			<div class="exhibition-col1">
 				<img src="images/ImportantPapers&Documents.png">
 				<div class="layer1">
-					<h3>IMPORTANT PAPERS AND DOCUMENTS</h3>
+					<h3>IMPORTANT DOCUMENTS</h3>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime enim repellat consequatur illum
-					odio, dolor dolore tenetur fugit ducimus, minima minus similique laborum! Aliquam est obcaecati sed
-					dolorum necessitatibus beatae.</p>
+				<p>Official documents from World War II offer a glimpse into the political landscape, societal structures, and economic turmoil of the time. Ration cards, memos, declarations of war, treaties, plans, wills and more! Discover it all here at the archives of the World War II Museum! </p>
 			</div>
 		</div>
 		<div class="row2">
@@ -95,19 +91,14 @@
 				<div class="layer2">
 					<h3>PROMINENT LEADERS</h3>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime enim repellat consequatur illum
-					odio, dolor dolore tenetur fugit ducimus, minima minus similique laborum! Aliquam est obcaecati sed
-					dolorum necessitatibus beatae.</p>
+				<p>Learn more about the leaders who shaped this era and get a glance at some prominent faces. The World War II Museum's collection stands unparalleled!</p>
 			</div>
 			<div class="exhibition-col2">
 				<img src="images/memorial.jpg">
 				<div class="layer2">
 					<h3>ART AND SCULPTURES</h3>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime enim repellat consequatur illum
-					odio, dolor dolore tenetur fugit ducimus, minima minus similique laborum! Aliquam est obcaecati
-					sed
-					dolorum necessitatibus beatae.</p>
+				<p>During World War II, many artists found themselves in the most difficult conditions, and their works are a testimony to a powerful "urge to create." Sculptures too came up often as a tribute to fallen soldiers from the war and an ode to the nation.</p>
 			</div>
 		</div>
 		</div>
@@ -116,18 +107,14 @@
 	<!-- Testimonials -->
 	<section class="testimonials">
 		<h1>What our Visitors Say</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi temporibus quibusdam consectetur corrupti
-			illum explicabo dolore? Blanditiis laborum, vel qui commodi nemo quod, mollitia consectetur cumque
-			repellendus cupiditate saepe totam?</p>
+		<p>Top reviews from our past visitors</p>
 
 		<div class="row">
 			<div class="testimonial-col">
 				<img src="images/User1.png">
 				<div>
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta sint nemo eius officiis nostrum
-						adipisci minus tenetur ipsam. Omnis eius consectetur facere, error natus qui velit! Sequi magnam
-						aliquam nihil.</p>
-					<h3>Christine Berkley</h3>
+					<p>Museum is simply incredible. So much to see and do, and so immersive. This can easily be far longer than just a one day experience. Great atmosphere, great food, great service, and reasonably priced.</p>
+					<h3>Aman Singh</h3>
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -138,10 +125,8 @@
 			<div class="testimonial-col">
 				<img src="images/User1.png">
 				<div>
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta sint nemo eius officiis nostrum
-						adipisci minus tenetur ipsam. Omnis eius consectetur facere, error natus qui velit! Sequi magnam
-						aliquam nihil.</p>
-					<h3>Christine Berkley</h3>
+					<p>This is not only a museum but an experience. It’s the most complete WWII museum I’ve ever seen. The exhibits are in gorgeous condition and I’m honestly amazed at the amount of items, videos, and overall history that is showcased.</p>
+					<h3>Reena Agarwal</h3>
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -154,9 +139,7 @@
 
 	<!-- Contact US -->
 	<section class="cu">
-		<h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente natus veniam omnis voluptas ullam?
-			Distinctio doloribus, dolorem nam molestiae minus magnam mollitia sunt possimus iure dolorum atque, deserunt
-			impedit vel?</h1>
+		<h1>Have a question? We'd love to help!</h1>
 		<a href="contact.html" class="btn1">CONTACT US</a>
 
 	</section>
