about page final

--- a/about.html
+++ b/about.html
@@ -56,10 +56,8 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>Lorem ipsum dolor sit amet consectetur</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ullam assumenda impedit optio voluptate
-                    ducimus obcaecati atque pariatur officia officiis dolores, eaque dicta enim totam sed amet facilis
-                    nemo aperiam.</p>
+                <h1>World's Largest World War II Museum</h1>
+                <p>Travelling back in time has never been easier! We make learning about World War II history possible from the comfort of your home. Take a 360 degree tour of our exhibits, read and view our collections on books, music, film and so much more!</p>
                 <a href="tour.html" class="btn1 red-btn">EXPLORE NOW</a>
             </div>
             <div class="aboul-col">
