--- a/film_and_music.html
+++ b/film_and_music.html
@@ -54,24 +54,22 @@
 
     <!-- Exhibition Content -->
     <section class="items">
-        <h1>Items</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
-            accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
-            et?</p>
+        <h1>Films</h1>
 
         <div class="exh-row">
             <div class="exh-col">
-                <h3>Battle of Britain</h3>
-                <iframe width="100%" height="100%" src="images/BattleOfBritain.mp4"></iframe>
-                <p>The heroic sacrifices of those made in the Battle of Britain were immortalised in the great and
-                    sobering words of Sir Winston Churchill when he said “never was so much owed by so many to so few.”
-                </p>
+                <h3>The Great Escape</h3>
+                <iframe width="100%" height="100%" src="images/TheGreatEscape.mp4"></iframe>
+                <p>Based on Paul Brickhill’s nonfiction book of the same name (but done so with great fictitious
+                    liberty), The Great Escape follows the escape of British Commonwealth soldiers from a POW camp in
+                    Nazi Germany. The film has since become a classic in cinema history, especially for, as one might
+                    guess, its chase scenes.</p>
                 </iframe>
             </div>
 
             <div class="exh-col">
-                <h3>The Dam Busters March</h3>
-                <iframe width="100%" height="100%" src="images/TheDamBustersMarch.mp4"></iframe>
+                <h3>The Imitation Game</h3>
+                <iframe width="100%" height="100%" src="images/TheImitationGame.mp4"></iframe>
                 <p>The main theme from 1955 epic film The Dam Busters and now a mainstay of military concerts and
                     commemorations all year round, the lively march evokes the heroism and spirit of the members of
                     RAF’s 617 Squadron who contributed so significantly to the British war effort by destroying several
@@ -79,87 +77,86 @@
             </div>
 
             <div class="exh-col">
-                <h3>Theme from The Great Escape</h3>
+                <h3>Dunkirk</h3>
+                <iframe width="100%" height="100%" src="images/Dunkirk.mp4"></iframe>
+                <p>There’s a lot more to this Christopher Nolan-directed film than Harry Styles’s cameo in it. The film
+                    confronts the Allies’ evacuation of Dunkirk, on the shore of northern France, from the perspective
+                    of land, sea, and air.</p>
+            </div>
+        </div>
+
+        <div class="exh-row">
+            <div class="exh-col">
+                <h3>Empire of the Sun</h3>
+                <iframe width="100%" height="100%" src="images/EmpireOfTheSun.mp4"></iframe>
+                <p>A young Christian Bale stars as an English boy separated from his family in Japan-controlled China.
+                </p>
+            </div>
+
+            <div class="exh-col">
+                <h3>Jojo Rabbit</h3>
+                <iframe width="100%" height="100%" src="images/JojoRabbit.mp4"></iframe>
+                <p>Few comedians are bold enough to cast themselves as Adolf Hitler. Taika Waititi’s satirical spin on
+                    Nazi Germany explores a more innocent perspective of the era from a Hitler Youth member, whose
+                    perception of the war is clearly skewed by his naivety. This naivety meets reality, though, when he
+                    forms an unlikely relationship with a young Jewish girl who is hiding in his house.</p>
+                </iframe>
+            </div>
+
+            <div class="exh-col">
+                <h3>Black Book</h3>
+                <iframe width="100%" height="100%" src="images/BlackBook.mp4"></iframe>
+                <p>A Jewish singer goes undercover for the Dutch resistance in order to infiltrade the Nazi headquarters
+                    in Netherlands.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="items">
+        <h1>Music</h1>
+
+        <div class="exh-row">
+            <div class="exh-col">
+                <h3>At Mail Call Today - Gene Autry</h3>
                 <audio controls autoplay>
-                    <source src="images/TheGreatEscape.mp3" type="audio/mp3">
+                    <source src="images/GeneAutry.mp3" type="audio/mp3">
                 </audio>
-                <p>The plucky theme from The Great Escape (1963) encapsulates British resolve and spirit in the face of
-                    the adversity of World War II.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Exhibtion Images -->
-    <section class="exh-img">
-        <h1>Exhibitions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda sit ipsa labore sapiente ullam vel
-            iure eos molestias, incidunt cum quasi eligendi? Odio quis excepturi, obcaecati asperiores quam accusantium!
-        </p>
-
-        <div class="exh-row">
-            <div class="exh-img-col">
-                <img src="images/anne.jpg">
-                <div class="layer">
-                    <h3>ANNE FRANK'S DIARY</h3>
-                </div>
+                <p>There was nothing better for a lonely soldier than a mail call, and there was nothing worse than one
+                    that delivered a "Dear John" letter from a sweetheart back home.</p>
             </div>
 
-            <div class="exh-img-col">
-                <img src="images/four.jpg">
-                <div class="layer">
-                    <h3>FOUR QUARTETS</h3>
-                </div>
+            <div class="exh-col">
+                <h3>There's a Star Spangled Banner Waving Somewhere - Elton Britt</h3>
+                <audio controls autoplay>
+                    <source src="images/EltonBritt.mp3" type="audio/mp3">
+                </audio>
+                <p>Elton Britt's song was the biggest country music hit of the era, selling over one million copies.
+                    President Franklin D. Roosevelt even asked the singer to perform the song for him at the White
+                    House.
+                    <br>
+                    In the song, a wounded soldier wishes he could get back to the battlefield to fight alongside his
+                    brothers and possibly find himself a place in a heaven reserved for brave warriors who die in
+                    battle.
+                </p>
             </div>
 
-            <div class="exh-img-col">
-                <img src="images/flag.jpg">
-                <div class="layer">
-                    <h3>PUT OUT MORE FLAGS</h3>
-                </div>
+            <div class="exh-col">
+                <h3>There's a Gold Star in Her Window - Tex Ritter</h3>
+                <audio controls autoplay>
+                    <source src="images/TexRitter.mp3" type="audio/mp3">
+                </audio>
+                <p>John Ritter's dad was a successful actor in singing cowboy pictures and had a big hit with this
+                    sentimental song, which he wrote, about a mom who knows her son who died in action will be waiting
+                    for her in heaven.</p>
             </div>
-        </div>
-    </section>
-
-    <!-- Extra  Exhibition Features -->
-    <section class="extra">
-        <h1>More</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat labore possimus doloremque numquam ipsa
-            praesentium modi porro alias adipisci obcaecati unde ipsam tenetur laboriosam sit necessitatibus, sint ex.
-            Et, at?</p>
-
-        <div class="exh-row">
-            <div class="extra-col">
-                <img src="images/instrument.jpg">
-                <h3>Instrument of Surrender</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
-            </div>
-
-            <div class="extra-col">
-                <img src="images/ration.jpg">
-                <h3>National Ration Book</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
-            </div>
-
-            <div class="extra-col">
-                <img src="images/telegram.jpg">
-                <h3>Fake Telegrams</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
-            </div>
-        </div>
     </section>
 
     <!-- Footer -->
     <section class="footer">
         <h4>About Us</h4>
         <p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
-			<br>
-			music, films, art, documents and more of World War II right to your home!
+            <br>
+            music, films, art, documents and more of World War II right to your home!
         </p>
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
