--- a/prominent_leaders.html
+++ b/prominent_leaders.html
@@ -54,106 +54,73 @@
 
     <!-- Exhibition Content -->
     <section class="items">
-        <h1>Items</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
-            accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
-            et?</p>
+        <div class="exh-row">
+            <div class="exh-col">
+                <h2>James Doolittle</h2>
+                <p>A U.S. Army general best known for leading the famous “Doolittle Raid” in 1942, in which B-25 bombers
+                    were launched from an aircraft carrier to bomb Japan and then crash-landed in China.</p>
+                <img src="images/JamesDoolittle.png" height="300px" width="300px">
+            </div>
+
+            <div class="exh-col">
+                <h2>Neville Chamberlain</h2>
+                <p>The prime minister of Britain from 1937 to 1940, who advocated a policy of Appeasement toward the
+                    territorial demands of Nazi Germany. This appeasement policy essentially turned a blind eye to
+                    Germany’s 1938 annexation of Austria and the Sudetenland.</p>
+                <img src="images/NevilleChamberlain.png" height="300px" width="300px">
+            </div>
+
+            <div class="exh-col">
+                <h2>Winston Churchill</h2>
+                <p>The prime minister of Britain during most of World War II. Churchill was among the most active
+                    leaders in resisting German aggression and played a major role in assembling the Allied Powers,
+                    including the United States and the USSR.</p>
+                <img src="images/WinstonChurchill.png" height="300px" width="300px">
+            </div>
+        </div>
 
         <div class="exh-row">
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h2>Dwight D. Eisenhower</h2>
+                <p>A U.S. Army general who held the position of supreme Allied commander in Europe, among many others.
+                    Eisenhower was perhaps best known for his work in planning Operation Overlord, the Allied invasion
+                    of Europe. After the war, he was a very popular figure in the United States and was elected to two
+                    terms as U.S. president, taking office in 1953.</p>
+                <img src="images/DwightDEisenhower.png" height="300px" width="300px">
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h2>Adolf Hitler</h2>
+                <p>Chancellor and self-proclaimed Führer, or “leader,” of Germany from 1933 until his suicide in 1945.
+                    After a rapid political ascent as the leader of the far-right Nazi Party in the 1920s, Hitler
+                    achieved absolute power and maintained it throughout his time as chancellor. During his rule, he
+                    took a very active role in the government of Germany, making military decisions and implementing
+                    edicts regarding the treatment of Jews and other minorities, such as the notorious “Final Solution”
+                    that condemned Jews to death at Concentration Camps in German-controlled parts of Europe. Just
+                    before Germany surrendered in 1945, Hitler committed suicide together with his wife, Eva Braun, in
+                    his bunker in Berlin.</p>
+                <img src="images/AdolfHitler.png" height="300px" width="300px">
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h2>Hirohito</h2>
+                <p>Emperor of Japan from 1926 until his death in 1989. Despite the power of Japan’s military leaders,
+                    many scholars believe that Hirohito took an active role in leading the country and shaping its
+                    combat strategy during World War II. After Japan’s defeat, he was allowed to continue to hold his
+                    position as emperor—largely as a figurehead—despite the fact that Japan was under U.S. occupation.
+                    Although many countries favored it, Hirohito was never tried for war crimes.</p>
+                <img src="images/Hirohito.png" height="300px" width="300px">
             </div>
         </div>
     </section>
 
-    <!-- Exhibtion Images -->
-    <section class="exh-img">
-        <h1>Exhibitions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda sit ipsa labore sapiente ullam vel
-            iure eos molestias, incidunt cum quasi eligendi? Odio quis excepturi, obcaecati asperiores quam accusantium!
-        </p>
-
-        <div class="exh-row">
-            <div class="exh-img-col">
-                <img src="images/anne.jpg">
-                <div class="layer">
-                    <h3>ANNE FRANK'S DIARY</h3>
-                </div>
-            </div>
-
-            <div class="exh-img-col">
-                <img src="images/four.jpg">
-                <div class="layer">
-                    <h3>FOUR QUARTETS</h3>
-                </div>
-            </div>
-
-            <div class="exh-img-col">
-                <img src="images/flag.jpg">
-                <div class="layer">
-                    <h3>PUT OUT MORE FLAGS</h3>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Extra  Exhibition Features -->
-    <section class="extra">
-        <h1>More</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat labore possimus doloremque numquam ipsa
-            praesentium modi porro alias adipisci obcaecati unde ipsam tenetur laboriosam sit necessitatibus, sint ex.
-            Et, at?</p>
-
-        <div class="exh-row">
-            <div class="extra-col">
-                <img src="images/instrument.jpg">
-                <h3>Instrument of Surrender</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
-            </div>
-
-            <div class="extra-col">
-                <img src="images/ration.jpg">
-                <h3>National Ration Book</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
-            </div>
-
-            <div class="extra-col">
-                <img src="images/telegram.jpg">
-                <h3>Fake Telegrams</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <section class="footer">
         <h4>About Us</h4>
         <p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
-			<br>
-			music, films, art, documents and more of World War II right to your home!
+            <br>
+            music, films, art, documents and more of World War II right to your home!
         </p>
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
